# lawn-stats

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
lawn_stats/: models.py  tasks.py  views.py
