[build-system]
build-backend = "flit_core.buildapi"

requires = [ "flit-core>=3.2,<4" ]

[project]
name = "lawn-stats"
description = "lawn stats module"
readme = "README.md"
keywords = [ "allianceauth" ]
license = { file = "LICENSE" }
authors = [ { name = "Swashman(John Nelson)", email = "jnelson2288@gmail.com" } ]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "version" ]
dependencies = [ "allianceauth>=4,<5", "matplotlib", "numpy", "pandas" ]

urls.Documentation = "https://gitlab.com/lawn-alliance/lawn-stats/-/blob/master/README.md"
urls.Homepage = "https://gitlab.com/lawn-alliance/lawn-stats"

[tool.flit.module]
name = "lawn_stats"

known_allianceauth = [ "allianceauth", "app_utils" ]
known_django = [ "django", "django_webtest", "esi", "eveuniverse" ]

[tool.isort]
profile = "black"
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "ALLIANCEAUTH",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pylint.'MASTER']
ignore-patterns = [ "__init__.py", "auth_hooks.py", "apps.py", "admin.py" ]
ignore-paths = [ "^.*/tests/.*$", "^.*/migrations/.*$" ]
fail-under = 8.0

[tool.pylint.'BASIC']
good-names = [ "i", "j", "k", "ex" ]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "cyclic-import",
    "fixme",
    "import-outside-toplevel",
    "imported-auth-user",
    "too-few-public-methods",
    "no-name-in-module",
]
